--- a/examples/spark_mesos_cluster.yaml
+++ b/examples/spark_mesos_cluster.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/spark_on_mesos/custom_types.yaml
 
 description: >
     TOSCA template for deploying Spark + Mesos cluster. The following flavors can be selected setting the input spark_mesos_flavor:
@@ -65,7 +65,7 @@ topology_template:
       type: integer
       description: The maximum amount of CPU cores to request for the application from across the cluster
       required: false
-      default: ''
+      default: '6'
 
     spark_executor_cores: 
       type: integer
@@ -77,19 +77,19 @@ topology_template:
       type: scalar-unit.size
       description: Amount of memory to use per executor process 
       required: false
-      default: ''
+      default: '1 GB'
 
     spark_driver_mem: 
       type: scalar-unit.size
       description: Amount of memory to use for the driver process, i.e. where SparkContext is initialized
       required: false
-      default: ''
+      default: '1 GB'
 
     spark_driver_cores: 
       type: integer
       description: Number of cores to use for the driver process
       required: false
-      default: ''
+      default: '1'
 
     spark_swift_auth_url:
       type: string
