Fix properties names

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1253,8 +1253,8 @@ node_types:
             spark_mesos_swift_provider: { get_property: [ SELF, spark_swift_provider ] }
             spark_mesos_cores_max: { get_property: [ SELF, spark_cores_max ] }
             spark_mesos_executor_cores: { get_property: [ SELF, spark_executor_cores ] }
-            spark_mesos_executor_memory: { get_property: [ SELF, spark_executor_mem ] }
-            spark_mesos_driver_memory: { get_property: [ SELF, spark_driver_mem ] }
+            spark_mesos_executor_mem: { get_property: [ SELF, spark_executor_mem ] }
+            spark_mesos_driver_mem: { get_property: [ SELF, spark_driver_mem ] }
             spark_mesos_driver_cores: { get_property: [ SELF, spark_driver_cores ] }
     requirements:
       - host:
