Fixing properties types for Spark (#177)
* Using modified artifacts

* Fixing spark_driver_mem default

* Update custom_types.yaml

* Fixing spark properties

* Use feature branch for spark artifact

* Fix properties names

* Fixing default in spark template

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -932,7 +932,7 @@ node_types:
     interfaces:
       Standard:
         configure:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_master_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/spark_on_mesos/artifacts/mesos/mesos_master_install.yml
           inputs:
             mesos_masters_list_ips: { get_property: [ SELF, mesos_masters_list ] }
             marathon_enable_ssl: { get_property: [ SELF, marathon_enable_ssl ] }
@@ -1052,7 +1052,7 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_slave_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/spark_on_mesos/artifacts/mesos/mesos_slave_install.yml
           inputs:
             mesos_masters_list_ips: { get_property: [ SELF, master_ips ] }
             enable_nfs_share: { get_property: [ SELF, enable_nfs_share ] }
@@ -1154,7 +1154,7 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_lb_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/spark_on_mesos/artifacts/mesos/mesos_lb_install.yml
           inputs:
             consul_server_ips: { get_property: [ SELF, master_ips ] }
             marathon_username: { get_property: [ SELF, marathon_username ] }
@@ -1213,25 +1213,25 @@ node_types:
         required: false
         default: 'Test'
       spark_cores_max: 
-        type: string
+        type: integer
         required: false
-        default: ''
+        default: '-1'
       spark_executor_cores: 
-        type: string
+        type: integer
         required: false
-        default: ''
+        default: '-1'
       spark_executor_mem:
-        type: string
+        type: scalar-unit.size
         required: false
-        default: ''
+        default: '0 GB'
       spark_driver_mem: 
-        type: string
+        type: scalar-unit.size
         required: false
-        default: ''
+        default: '0 GB'
       spark_driver_cores: 
-        type: string
+        type: integer
         required: false
-        default: ''
+        default: '-1'
     artifacts:
       spark_mesos_role:
         file: indigo-dc.spark-mesos
@@ -1239,7 +1239,7 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/spark_mesos_setup.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/spark_on_mesos/artifacts/mesos/spark_mesos_setup.yml
           inputs:
             marathon_password: { get_property: [ SELF, marathon_password ] }
             zookeeper_peers: { get_property: [ SELF, zookeeper_peers ] }
@@ -1253,8 +1253,8 @@ node_types:
             spark_mesos_swift_provider: { get_property: [ SELF, spark_swift_provider ] }
             spark_mesos_cores_max: { get_property: [ SELF, spark_cores_max ] }
             spark_mesos_executor_cores: { get_property: [ SELF, spark_executor_cores ] }
-            spark_mesos_executor_memory: { get_property: [ SELF, spark_executor_mem ] }
-            spark_mesos_driver_memory: { get_property: [ SELF, spark_driver_mem ] }
+            spark_mesos_executor_mem: { get_property: [ SELF, spark_executor_mem ] }
+            spark_mesos_driver_mem: { get_property: [ SELF, spark_driver_mem ] }
             spark_mesos_driver_cores: { get_property: [ SELF, spark_driver_cores ] }
     requirements:
       - host:
