Set default value to public_front_end_ip

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -649,6 +649,7 @@ node_types:
         type: string
         description: Public IP of the Front-End node
         required: false
+        default: ''
     capabilities:
         wn:
           type: tosca.capabilities.Scalable
