--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -432,10 +432,13 @@ node_types:
         default: "galaxy"
         required: false
     artifacts:
+      oneclient_role:
+        file: indigo-dc.oneclient
+        type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_os_role:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_role:
+      galaxy_role-fastconfig:
         file: indigo-dc.galaxycloud-fastconfig
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
