download cvmfs key only when cvmfs is used

--- a/artifacts/galaxy/galaxy_redfata_configure.yml
+++ b/artifacts/galaxy/galaxy_redfata_configure.yml
@@ -6,5 +6,6 @@
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_key_file }}'
         dest: '/tmp'
+      when: refdata_provider_type == 'cvmfs'
   roles:
     - role: indigo-dc.galaxycloud-refdata
