Workaround for https://github.com/indigo-dc/orchestrator/issues/221

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1287,12 +1287,12 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/spark_mesos_setup.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/fix_spark_default_values/artifacts/mesos/spark_mesos_setup.yml
           inputs:
             marathon_password: { get_property: [ SELF, marathon_password ] }
             zookeeper_peers: { get_property: [ SELF, zookeeper_peers ] }
-            spark_mesos_hdfs_uri: { get_property: [ SELF, spark_hdfs_uri ] }
-            spark_mesos_swift_auth_url: { get_property: [ SELF, spark_swift_auth_url ] }
+            spark_hdfs_uri: { get_property: [ SELF, spark_hdfs_uri ] }
+            spark_swift_auth_url: { get_property: [ SELF, spark_swift_auth_url ] }
             spark_mesos_swift_http_port: { get_property: [ SELF, spark_swift_http_port ] }
             spark_mesos_swift_region: { get_property: [ SELF, spark_swift_region  ] }
             spark_mesos_swift_tenant: { get_property: [ SELF, spark_swift_tenant ] }
