--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -356,7 +356,7 @@ node_types:
     properties:
       os_storage:
         type: string
-        description: Storage type (Iaas Block Storage (default), Onedaata, Filesystem encryption)
+        description: Storage type (Iaas Block Storage (default), Onedata, Filesystem encryption)
         default: "IaaS"
         required: true
       token:
