--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -375,6 +375,9 @@ node_types:
         default: "galaxy"
         required: false
     artifacts:
+      indigorepo_role:
+        file: indigo-dc.galaxycloud-indigorepo
+        type: tosca.artifacts.AnsibleGalaxy.role
       oneclient_role:
         file: indigo-dc.oneclient
         type: tosca.artifacts.AnsibleGalaxy.role
