--- a/examples/galaxy_elixirIT_fastconfig.yaml
+++ b/examples/galaxy_elixirIT_fastconfig.yaml
@@ -122,7 +122,7 @@ topology_template:
   node_templates:
 
     galaxy:
-      type: tosca.nodes.indigo.GalaxyPortalAndStorage
+      type: tosca.nodes.indigo.GalaxyPortalFastConfig
       properties:
         os_storage: { get_input: galaxy_storage_type }
         token: { get_input: userdata_token }
@@ -182,7 +182,8 @@ topology_template:
         # Guest Operating System properties
         os:
           properties:
-            image: { concat: ['centos_', get_input: flavor, '_vmi'] } # centos_galaxy-no-tools_vmi
+            image: linux-centos-galaxy-no-tools-vmi
+            #image: { concat: ['linux-centos-', get_input: flavor, '-vmi'] } # linux-centos-galaxy-no-tools-vmi
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
