--- a/examples/galaxy_elastic_cluster.yaml
+++ b/examples/galaxy_elastic_cluster.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro/custom_types.yaml
 
 description: >
   TOSCA test for launching a Virtual Elastic Cluster. It will launch
@@ -121,6 +121,8 @@ topology_template:
 
     galaxy_wn:
       type: tosca.nodes.indigo.GalaxyWN
+      properties:
+        front_end_ip: { get_attribute: [ lrms_server, public_address, 0 ] }
       requirements:
         - host: lrms_wn
 
