--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -551,7 +551,7 @@ node_types:
         type: string
         description: Reference data CernVM-FS repository name
         default: 'not_a_cvmfs_repository_name'
-        requred: false
+        required: false
       refdata_cvmfs_key_file:
         type: string
         description: CernVM-FS public key
