Improve Chronos and Marathon nodes

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -845,11 +845,26 @@ node_types:
         type: map
         entry_schema:
           type: string
+      constraints:
+        required: no
+        type: list
+        entry_schema:
+          type: list
+          entry_schema:
+            type: string
       labels:
         required: no
         type: map
         entry_schema:
           type: string
+      priviliged:
+        required: no
+        type: boolean
+        default: false
+      force_pull_image:
+        required: no
+        type: boolean
+        default: false
 
 
   tosca.nodes.indigo.Container.Application.Docker.Chronos:
@@ -864,6 +879,18 @@ node_types:
       retries:
         required: no
         type: integer
+      epsilon:
+        required: no
+        type: string
+        default: PT10S
+      priviliged:
+        required: no
+        type: boolean
+        default: true
+      force_pull_image:
+        required: no
+        type: boolean
+        default: true
     capabilities:
       parent_job:
         type: tosca.capabilities.indigo.Container.Application.Docker.Chronos
@@ -972,6 +999,15 @@ node_types:
 
   tosca.nodes.indigo.Container.Application.Docker.Marathon:
     derived_from: tosca.nodes.indigo.Container.Application.Docker
+    attributes:
+      load_balancer_ips:
+        type: list
+        entry_schema: string
+    properties:
+      force_pull_image:
+        required: no
+        type: boolean
+        default: true
 
 
   tosca.nodes.indigo.LRMS.FrontEnd.Mesos:
