--- a/examples/galaxy_elastic_cluster_aws.yaml
+++ b/examples/galaxy_elastic_cluster_aws.yaml
@@ -113,6 +113,8 @@ topology_template:
 
     galaxy_wn:
       type: tosca.nodes.indigo.GalaxyWN
+      properties:
+        front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
       requirements:
         - host: lrms_wn
 
