--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -840,7 +840,7 @@ node_types:
     derived_from: tosca.nodes.Container.Application.Docker
     properties:
       command:
-        required: yes
+        required: no
         type: string
       uris:
         required: no
@@ -879,6 +879,9 @@ node_types:
     properties:
       schedule:
         required: no
+        type: string
+      command:
+        required: yes
         type: string
       description:
         required: no
