Added parameters to change mesos credentials

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1034,6 +1034,18 @@ node_types:
         type: string
         required: no
         default: { get_attribute: [ HOST, public_address ] }
+      mesos_authenticate_http:
+        type: boolean
+        required: no
+        default: true
+      mesos_username:
+        type: string
+        required: no
+        default: 'admin'       
+      mesos_password:
+        type: string
+        required: no
+        default: 'admin'         
       marathon_enable_ssl:
         type: boolean
         required: no
@@ -1093,6 +1105,9 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_master_install.yml
           inputs:
             mesos_masters_list_ips: { get_property: [ SELF, mesos_masters_list ] }
+            mesos_authenticate_http: { get_property: [ SELF, mesos_authenticate_http ] }
+            mesos_username: { get_property: [ SELF, mesos_username ] }
+            mesos_password: { get_property: [ SELF, mesos_password ] }
             marathon_enable_ssl: { get_property: [ SELF, marathon_enable_ssl ] }
             marathon_user: { get_property: [ SELF, marathon_username ] }
             marathon_pass: { get_property: [ SELF, marathon_password ] }
