--- a/artifacts/galaxy/galaxy_wn_configure.yml
+++ b/artifacts/galaxy/galaxy_wn_configure.yml
@@ -18,7 +18,7 @@
       authorized_key: user={{galaxy_user}} key="{{ lookup('file', '/tmp/' + galaxy_user + '_id_rsa.pub') }}"
 
   roles:
-    - { role: indigo-dc.galaxycloud-tooldeps, check_galaxy: false, galaxy_instance_url: 'http://{{ galaxy_front_end_ip }}/galaxy/' }
+    - { role: indigo-dc.galaxycloud-tooldeps, check_galaxy: false }
     - role: indigo-dc.nfs
       nfs_mode: 'client'
       nfs_client_imports: [{ local: "{{export_dir}}", remote: "{{export_dir}}", server_host: "{{ galaxy_front_end_ip }}" }]
