--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -466,6 +466,10 @@ node_types:
   tosca.nodes.indigo.GalaxyWN:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
+      front_end_ip:
+        type: string
+        description: IP of the Front-End node
+        required: true
       export_dir:
         type: string
         description: path to store galaxy data
@@ -481,6 +485,7 @@ node_types:
         configure:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/galaxy/galaxy_wn_configure.yml
           inputs:
+            galaxy_front_end_ip: { get_property: [ SELF, front_end_ip ] }
             export_dir: { get_property: [ SELF, export_dir ] }
 
   tosca.nodes.indigo.GalaxyShedTool:
