export_dir to /export

--- a/examples/galaxy_elastic_cluster_aws.yaml
+++ b/examples/galaxy_elastic_cluster_aws.yaml
@@ -43,7 +43,7 @@ topology_template:
     export_dir:
       type: string
       description: path to store galaxy data
-      default: /home/export
+      default: /export
 
     access_key:
       type: string
