--- a/examples/galaxy_elastic_cluster_elixirIT.yaml
+++ b/examples/galaxy_elastic_cluster_elixirIT.yaml
@@ -242,8 +242,8 @@ topology_template:
       properties:
         export_dir: { get_input: export_dir }
         front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
-        galaxy_flavor: { get_input: flavor }
-        galaxy_version: { get_input: version }
+        flavor: { get_input: flavor }
+        version: { get_input: version }
         reference_data: { get_input: reference_data }
         refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
         refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
