--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -589,6 +589,11 @@ node_types:
         description: key to access the API with admin role
         default: not_very_secret_api_key
         required: false
+      version:
+        type: string
+        description: galaxy version installed
+        default: master
+        required: false
     requirements:
       - host:
           capability: tosca.capabilities.Container
@@ -604,11 +609,12 @@ node_types:
     interfaces:
       Standard:
         configure:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/galaxy/galaxy_tools_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro/artifacts/galaxy/galaxy_tools_configure.yml
           inputs:
             galaxy_flavor: { get_property: [ SELF, flavor ] }
             galaxy_admin_api_key: { get_property: [ HOST, admin_api_key ] }
             instance_public_ip: { get_attribute: [ HOST, public_address, 0 ] }
+            galaxy_version: { get_property: [ SELF, version ] }
 
   tosca.nodes.indigo.GalaxyReferenceData:
     derived_from: tosca.nodes.WebApplication
