--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -587,7 +587,7 @@ node_types:
           relationship: tosca.relationships.HostedOn
     artifacts:
       galaxy_role:
-        file: indigo-dc.galaxy-tools,master
+        file: indigo-dc.galaxycloud-tools
         type: tosca.artifacts.AnsibleGalaxy.role
       tooldeps_role:
         file: indigo-dc.galaxycloud-tooldeps
@@ -595,7 +595,7 @@ node_types:
     interfaces:
       Standard:
         configure:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/galaxy/galaxy_tools_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro/artifacts/galaxy/galaxy_tools_configure.yml
           inputs:
             galaxy_flavor: { get_property: [ SELF, flavor ] }
             galaxy_admin_api_key: { get_property: [ HOST, admin_api_key ] }
