--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1247,6 +1247,7 @@ node_types:
             chronos_pass: { get_property: [ SELF, chronos_password ] }
             enable_nfs_share: { get_property: [ SELF, enable_nfs_share ] }
             wn_ips: { get_property: [ SELF, wn_ips ] }
+            service_discovery: { get_property: [ SELF, service_discovery ] }
 
   tosca.nodes.indigo.MesosMaster:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd.Mesos
@@ -1372,6 +1373,7 @@ node_types:
             mesos_masters_list_ips: { get_property: [ SELF, master_ips ] }
             enable_nfs_share: { get_property: [ SELF, enable_nfs_share ] }
             front_end_ip: { get_property: [ SELF, front_end_ip ] }
+            service_discovery: { get_property: [ SELF, service_discovery ] }
 
   tosca.nodes.indigo.MesosSlave:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode.Mesos
